--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,6 @@
 dist/
 # generated types
 .astro/
-
 # dependencies
 node_modules/
 
@@ -22,3 +21,4 @@ pnpm-debug.log*
 
 # jetbrains setting folder
 .idea/
+.vscode/
